Added Readme and refactoring